# sky

./: .gitignore  pyproject.toml  readme.md
run/public/: demo_filemanager.py  demo_plotlib.ipynb  demo_plotlib_advanced.ipynb  demo_plotlib_basics.ipynb  demo_plotter.ipynb  demo_save_pdftex.py  demo_save_sim.py
run/public/demo_model/: analytic.py
run/public/plots/: demo_plotlib.ipynb  demo_plotter.ipynb  test.ipynb
run/public/save_sim_para/: demo_save_sim.py  sim_para.yaml
run/public/user_inputs/: demo_save_pdftex.py  demo_save_sim.py  sim_para.yaml
run/test_model/: analytic.py  argparser.py
src/oscy/plots/: datastructures.py  plotlib.py
src/oscy/plots/mpl_stylesheets/: paper.mplstyle  presentation.mplstyle
src/oscy/utils/: argparser.py  filemanager.py
src/sky/: filemanager.py  latexExporter.py  plotlib.py  translationRules.py
src/sky/demo_model/: analytic.py  argparser.py  logger.py
src/sky/mpl_stylesheets/: paper.mplstyle
src/sky/plots/: plotlib.py
src/sky/utils/: filemanager.py
