[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sky"
version = "0.0.1"
dependencies = [
    "matplotlib",
    "seaborn",
    "numpy",
    "scipy",
    "ConfigArgParse"
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default

